# healthcare_automation_system

./: app.py  pyproject.toml  requirements.txt  vector_db.py
automation1/: agents.py  automation.py  automation_data.json  crew_manager.py  main.py  run_app.py  sleep_disorder_guidance.txt  tasks2.py  tool2.py
db/: chroma.sqlite3
docs/: headaches_info.txt  profile.txt  reportformat.txt  userhistory.txt
ltsm/: memory.db
reports/: headache_report.txt
work_folder/: agents.py  app.py  crew1.py  crew_manager1_4.py  crew_manager1_5.py  crew_manager1_6.py  crew_manager1_7.py  crew_manager1_8.py  crew_manager1_9.py  crew_manager2.py  frontend.py  knowledgesource.py  main2.py  scheduler.py  search_results_2025-08-16_17-31-28.txt  task_v1.py  tasks.py  tasks2.py  tool2.py  tool3.py  tools.py
work_folder/db/: chroma.sqlite3
